# tgvoip

./: README.md
tgvoip/: CMakeLists.txt  README.md
tgvoip/patch/: lws_static.patch
tgvoip/tgvoip/: CMakeLists.txt  TgVoip.cpp  TgVoip.h  fileAudioDevice.cpp  fileAudioDevice.h  fileAudioDeviceModule.cpp  fileAudioDeviceModule.h  server.cpp  server.h  sessionDescriptionObserver.h  webRTCPeer.cpp  webRTCPeer.h
tgvoip/tgvoip/wsClient/: CMakeLists.txt  wsClient.cpp  wsClient.h
tgvoip/tgvoipcall/: CMakeLists.txt  main.cpp
tgwss/: CMakeLists.txt  README.md
tgwss/conf/: cert.pem  pkey.pem  tgwss.conf
tgwss/json/: confParser.cpp  confParser.h  parser.cpp  parser.h
tgwss/logger/: logger.cpp  logger.h
tgwss/wss/: main.cpp  wsServer.cpp  wsServer.h
